# axum-rest-example

./: .dockerignore  .dprint.json  .env-template  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml  create_table.sh  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: rust.yml
config/: .dprint.json  .prettierignore  .prettierrc.toml
db/local/: create-table.sh  localdb-compose.yml
docker/: Dockerfile
fmt/: .dprint.json  .prettierignore  .prettierrc.toml  .taplo.toml
local/: compose.yml  create-table.sh
scripts/: initial-setup.sh
src/: config.rs  main.rs  module.rs  route.rs  server.rs  usecase.rs
src/domain/: book.rs  user.rs
src/domain/book/: book_repo.rs
src/domain/user/: user_repo.rs
src/infrastructure/db/: dynamodb.rs
src/infrastructure/db/dynamodb/: book_repo_for_dynamodb.rs  deserializer.rs  user_repo_for_dynamodb.rs
src/infrastructure/db/dynamodb/deserializer/: book_deserializer.rs  user_deserializer.rs
src/presentation/: http.rs
src/presentation/http/: route.rs
src/presentation/http/route/: book_route.rs  health_check_route.rs
src/server/: error.rs  route.rs
src/server/route/: book_route.rs  health_check_route.rs  user_route.rs
src/usecase/: book_usecase.rs  user_usecase.rs
