[package]
name = "bookshelf"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"

[profile.release]
strip = "debuginfo"
overflow-checks = true

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std", "backtrace"] }
derive_more = { version = "0.99.17", default-features = false, features = ["constructor"] }
itertools = { version = "0.10.5", default-features = false }
maplit = { version = "1.0.2", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

config = { version = "0.13.3", default-features = false }
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false }
uuid = { version = "1.3.2", default-features = false }

async-trait = { version = "0.1.68", default-features = false }
tokio = { version = "1.28", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }

opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing = { version = "0.1.37", default-features = false }
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi", "env-filter"] }

async-graphql = { version = "5.0.7", default-features = false, features = ["playground", "opentelemetry"] }
async-graphql-axum = { version = "5.0.7", default-features = false }
axum = { version = "0.6.18", default-features = false, features = ["tokio", "http2", "json"] }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.4.0", default-features = false, features = ["util", "request-id", "compression-br", "timeout", "trace", "sensitive-headers", "map-response-body", "set-header", "catch-panic"] }

aws-config = { version = "0.54.1", default-features = false, features = ["rustls"] }
aws-sdk-config = { version = "0.24.0", default-features = false, features = ["rustls"] }
aws-sdk-dynamodb = { version = "0.24.0", default-features = false, features = ["rustls"] }
serde_dynamo = { version = "4.2.2", default-features = false, features = ["aws-sdk-dynamodb+0_24"] }
