[package]
name = "bookshelf"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "none"
debug = 1
overflow-checks = true

[dependencies]
anyhow = { version = "1.0.92", default-features = false, features = ["std", "backtrace"] }
chrono = "0.4.39"
config = { version = "0.15.4", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = ["constructor"] }
im-rc = { version = "15.1.0", default-features = false, features = ["serde"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
maplit = { version = "1.0.2", default-features = false }
once_cell = { version = "1.20.2", default-features = false }
regex = "1.11.1"
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
thiserror = { version = "2.0.9", default-features = false, features = ["std"] }
uuid = { version = "1.11.0", default-features = false }
validator = { version = "0.19", default-features = false, features = ["derive"] }

async-trait = { version = "0.1.83", default-features = false }
tokio = { version = "1.41", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }

tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter"] }

axum = { version = "0.8.1", default-features = false, features = ["tokio", "http1", "http2", "json"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.2", default-features = false, features = ["util", "request-id", "compression-br", "timeout", "trace", "sensitive-headers", "map-response-body", "set-header", "catch-panic"] }

aws-config = { version = "1.5.12", default-features = false, features = ["rustls"] }
aws-sdk-config = { version = "1.55.0", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-dynamodb = { version = "1.57.0", default-features = false, features = ["rustls"] }
